@@ -67,7 +67,7 @@ ChordRest* SCursor::cr() const
       if (_segment) {
             int track = _staffIdx * VOICES + _voice;
             Element* e = _segment->element(track);
-            if (e && e->isChordRest())
+            if (e && (e->isChordRest() || e->type() == REPEAT_MEASURE))
                   return static_cast<ChordRest*>(e);
             }
       return 0;
